# hotel-price-scraper-dashboard

./: .gitignore  README.md  dev.env  docker-compose.yml  pyproject.toml
app/: config.py  main.py  scraper.py  utils.py
db/: connect.py  init_db.py  init_test.py  mixins.py  models.py
tests/: test_db.py  test_scraper.py  test_validation.py
ui/: main.py
